
2000-05-04  Johannes Zellner <johannes@zellner.org>

	* reimplemented the Linux vgagl terminal driver with
	mouse and pm3d support (uses the lib3dkit library)

2000-05-03  Johannes Zellner <johannes@zellner.org>

	* merged pre-pm3d - pre-pm3d-01 from the MAIN trunk.

2000-05-02  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* INSTALL: In "Platform notes" section, add hint for using
	'gcc -ansi'.

	* Makefile.am: Add maintainer-only pre-dist target.

	* docs/Makefile.in: Don't hardcode pdflatex command.

	* docs/doc2texi.el: Add missing drivers.

	* docs/gnuplot.doc: Remove docs for comma line continuation.

	* src/*.h: Uniform RCS id header.

	* src/command.c, src/mics.c: Clean up, add comments, remove ESR's
	comma line continuation patch (doesn't work).

	* src/dynarray.c, src/tables.c: Add RCSid.

	* src/dynarray.h, src/ipc.h, src/mousecnm.h: Add gnuplot copyright
	statement, RCS id.

	* src/gp_hist.h, src/gp_time.h, src/history.c, src/time.c: Fix
	function prototypes.

	* src/graphics.c(graph_error), src/graphics.h: Revert to non-variadic
	version, as graph_error() tries to pass a variable number of arguments
	into another variadic function. Noted by Pieter-Tjerk de Boer.

	* src/mouse.c: Formatting, indentation, RCS id.

	* src/plot3d.h: Add external variable declaration.

	* src/version.c: Set bug_email and help_email to info-gnuplot-beta
	for development versions of gnuplot.

	* term/gif.trm(GIF_put_text): Fix compiler warnings, patch from
	Alexander Mai.

2000-05-01  Johannes Zellner <johannes@zellner.org>

	* branched off pm3d

2000-05-01  Johannes Zellner <johannes@zellner.org>

	* term/x11.trm: Remove superfluous ifndef(OS2).	Add SELECT_FD_SET_CAST
	to sselect() call.

2000-04-30  Johannes Zellner <johannes@zellner.org>

	* small patch such that zooming of map views works again.
	This patch apparently got lost during setup of the CVS repository.

2000-04-28  Jeff Spirko  <spirko@lehigh.edu>

	* src/plot.c(main): Allow configuration of GNU readline to use