@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.40.2.2 2000/05/03 21:22:17 joze Exp $
+C RCS $Id: gnuplot.doc,v 1.40.2.3 2000/05/09 17:52:53 mikulik Exp $
 C 3 December 1998
 C Copyright (C) 1986 - 1993, 1998   Thomas Williams, Colin Kelley
 C
@@ -5365,7 +5365,7 @@ C ... and restart the table:
 ?palette
  Palette is a colour storage for use by `pm3d`, filled colour contours or 
  polygons, colour histograms, colour gradient background, and whatever it is or
- it will be implemented...  Here it stays for a palette of smooth "continuous"
+ it will be implemented...  Here it stands for a palette of smooth "continuous"
  colours or grays, but let's call it just a palette.
 
  Colour palettes, or requires terminal entries for filled colour 
@@ -5406,7 +5406,7 @@ C ... and restart the table:
  to be chosen.  This is done via `rgbformulae <r>,<g>,<b>`.  The available 
  mapping functions are listed by `show palette`.  Default is `7,5,15`, some 
  other examples are `3,11,6`, `21,23,3` or `3,23,21`.  Negative numbers, like
- `3,-11,-6`, mean inverted color (i.e.  1-gray passed into the formula, see 
+ `3,-11,-6`, mean inverted colour (i.e.  1-gray passed into the formula, see 
  also `positive` and `negative` options below).
 
  Some nice schemes:
@@ -5414,8 +5414,9 @@ C ... and restart the table:
     3,11,6   ... green-red-violet
     23,28,3  ... ocean (green-blue-white); try also all other permutations
     21,22,23 ... hot (black-red-yellow-white)
-    30,31,32 ... color printable on gray (black-blue-violet-yellow-white)
+    30,31,32 ... colour printable on gray (black-blue-violet-yellow-white)
     33,13,10 ... rainbow (blue-green-yellow-red)
+    34,35,36 ... AFM hot (black-red-yellow-white)
 
  Use `positive` and `negative` to invert the figure colours.
 
@@ -5664,7 +5665,7 @@ C ... and restart the table:
        show style function
        show style data
 
- The types used for all line and point styles (i.e., solid, dash-dot, color,
+ The types used for all line and point styles (i.e., solid, dash-dot, colour,
  etc. for lines; circles, squares, crosses, etc. for points) will be either
  those specified on the `plot` or `splot` command or will be chosen
  sequentially from the types available to the terminal in use.  Use the
