@@ -1,5 +1,5 @@
 /*
- * $Id: post.trm,v 1.39.2.1 2000/05/01 00:17:20 joze Exp $
+ * $Id: post.trm,v 1.39.2.2 2000/05/09 17:52:53 mikulik Exp $
  */
 
 /* GNUPLOT - post.trm */
@@ -1761,6 +1761,9 @@ char *( PostScriptColorFormulae[] ) = {
   "/cF31 {2 mul 0.84 sub} def\t% 2*x-0.84",
   "/cF32 {dup 0.42 le {4 mul} {dup 0.92 le {-2 mul 1.84 add} {0.08 div 11.5 sub} ifelse} ifelse } def\t% 4x;1;-2x+1.84;x/0.08-11.5",
   "/cF33 {2 mul 0.5 sub abs} def\t% |2*x - 0.5|",
+  "/cF34 {2 mul} def\t% 2*x",
+  "/cF35 {2 mul 0.5 sub} def\t% 2*x - 0.5",
+  "/cF36 {2 mul 1 sub} def\t% 2*x - 1",
   "" };
 
 TERM_PUBLIC int PS_make_palette (t_sm_palette *palette)
