@@ -1,3 +1,5 @@
+2000-05-09  Petr Mikulik <mikulik@physics.muni.cz>
+	* pm3d: three new color mapping formulae 34--36: 2x,2x-0.5,2x-1
 
 2000-05-04  Johannes Zellner <johannes@zellner.org>
 
